# gcalc

./: .gitignore  Cargo.toml  README.md
docs/: change.md  meta.md  todo.md
src/: bin.rs  calc.rs  cli.rs  consts.rs  error.rs  formatter.rs  lib.rs  models.rs  plot.rs  utils.rs  wasm.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
