[package]
name = "gcalc"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]
description = "Game probability calculator"
homepage = "https://github.com/simhyeon/gcalc"
repository = "https://github.com/simhyeon/gcalc"
readme = "README.md"

[[bin]]
name = "gcalc"
path = "src/bin.rs"

[lib]
name = "gcalc"
path = "src/lib.rs"

[features]
binary = ["clap"]

[dependencies]
clap = { version = "3.0.0", default-features = false, features = ["std"], optional=true}
csv = "1.1.6"
thiserror = "1.0.25"
serde = { version = "1.0.126", features = ["derive"]}
tabled = "0.3.0"
