[package]
name = "gcalc"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]
description = "Game probability calculator"
homepage = "https://github.com/simhyeon/gcalc"
repository = "https://github.com/simhyeon/gcalc"
readme = "README.md"

[[bin]]
name = "gcalc"
path = "src/bin.rs"

[lib]
name = "gcalc"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[features]
wasm = [ "wasm-bindgen", "option" ]
binary = ["clap", "option", "tabled"]
option = ["serde_json"]

[dependencies]
clap = { version = "3.0.0", default-features = false, features = ["std"], optional=true}
csv = "1.1.6"
thiserror = "1.0.25"
serde = { version = "1.0.126", features = ["derive"]}
serde_json = { version = "1.0.59", optional = true }
tabled = { version = "0.3.0", optional = true }
wasm-bindgen = { version = "0.2.74", optional = true}
